--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.22.0",
     "next": "11.1.2",
     "phosphor-icons": "^1.3.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "zod": "^3.9.8"
   },
   "devDependencies": {
     "@types/react": "17.0.27",
