--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.22.0",
+    "leaflet": "^1.7.1",
     "next": "11.1.2",
     "phosphor-react": "^1.3.1",
     "react": "17.0.2",
