--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.22.0",
+    "js-cookie": "^3.0.1",
     "leaflet": "^1.7.1",
     "next": "11.1.2",
     "phosphor-react": "^1.3.1",
@@ -19,6 +20,7 @@
     "zod": "^3.9.8"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.0",
     "@types/leaflet": "^1.7.5",
     "@types/react": "17.0.27",
     "eslint": "7.32.0",
